--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "discord.js": "^11.3.0",
     "steem": "^0.7.1",
-    "winston": "^2.4.0"
+    "winston": "^2.4.0",
+    "table-layout": "^0.4.2"
   }
 }
